--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "ganache-cli": "^6.10.2",
+    "mocha": "^8.1.3",
     "solc": "^0.4.26"
+  },
+  "dependencies": {
+    "web3": "^1.2.11"
   }
 }
