--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "solc": "^0.4.26"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.2.11"
   }
 }
